# project-ark

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.py  pyproject.toml  reviews.csv
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr-title.yml
ats/: .gitignore  embedder.py  main.py  matcher.py  skill_extractor.py
automation/supermarket-ads/: README.md  config.json  pyproject.toml
infra/: infra.sh
infra/postgres/: .env.example  docker-compose.yml
lexiscan/: README.md  lexiscan.py  main.py  pyproject.toml
n8n/self-hosted-server/: .env.example  docker-compose.yml
n8n/supermarket-ads/: parser.py  product.xlsx
product_review_classifier/: README.md  scraper.py
projects/ats/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
projects/ats/app/: __init__.py  embedder.py  main.py  matcher.py  preprocessor.py  schemas.py  skill_extractor.py
projects/ats/data/: skills_taxonomy.json
projects/ats/tests/: test_api.py  test_skill_extractor.py
projects/lexiscan/: pyproject.toml
projects/lexiscan/tests/: test_lexiscan.py
projects/review-classifier/: README.md  pyproject.toml  requirements.txt  scraper.py
projects/review-classifier/tests/: test_scraper.py
