# Repository root — holds shared tooling config (ruff, pytest) only.
# Each module under projects/ and automation/ is a standalone uv project with
# its own pyproject.toml and lockfile; see CONTRIBUTING.md.
[project]
name = "project-ark"
version = "0.1.0"
description = "A monorepo of focused, production-oriented AI/ML modules sharing a unified toolchain and infrastructure."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
