[project]
name = "ats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black==24.1.1",
    "fastapi==0.110.0",
    "httpx==0.26.0",
    "nltk==3.8.1",
    "numpy==1.26.3",
    "pytest==8.0.0",
    "python-multipart==0.0.9",
    "rapidfuzz==3.6.1",
    "scikit-learn==1.4.0",
    "uvicorn[standard]==0.27.1",
]
